--- a/src/assets/styles/scss/login.scss
+++ b/src/assets/styles/scss/login.scss
@@ -6,11 +6,38 @@ a[href="/login.php"] {
   font-weight: bold;
 }
 
-.login-container {
-  form {
+header {
+  display: flex;
+  grid-column: 1/13;
+  margin-top: 70pt;
+  margin-bottom: 35pt;
+  justify-content: center;
 
+  img {
+    width: 240pt;
+  }
+}
+
+.login-container {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  gap: 6pt;
+  padding-inline: 0;
+
+  h1 {
+    grid-column: 2/3;
+  }
+
+  p {
+    text-align: center;
+    margin-top: 35pt;
+  }
+
+  form {
+    grid-column: 4/8;
     display: flex;
     flex-direction: column;
+    gap: 15pt;
 
     input {
       border-radius: 50vh;
@@ -21,16 +48,21 @@ a[href="/login.php"] {
       color: $text-color;
       min-height: 3rem;
     }
+
+    #login-button-wrapper {
+    display: flex;
+    flex-direction: row;
+    gap: 15pt;
+  }
   }
 }
 
 footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
   grid-column: 1/13;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  margin-top: 70pt;
 
   p {
     color: $text-color;
