--- a/src/assets/styles/scss/styles.css
+++ b/src/assets/styles/scss/styles.css
@@ -83,7 +83,7 @@ main {
 
 .error {
   background-color: #ce555b;
-  position: absolute;
+  position: fixed;
   padding: 1rem;
   max-width: 100vw;
   bottom: 1rem;
@@ -261,6 +261,9 @@ table {
   border-radius: 50vh;
   padding: 5pt 10pt;
   display: inline-block;
+  text-align: center;
+  min-height: 3rem;
+  justify-content: center;
 }
 
 .search-bar {
@@ -398,6 +401,75 @@ table {
   right: 0;
   margin-left: auto;
   margin-right: auto;
+}
+
+.editForm {
+  grid-column: 1/13;
+  background-color: #FFEEE0;
+  border-radius: 15px;
+  padding: 20px;
+  margin: 0 auto;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.editForm label {
+  color: #4E2323;
+  margin-bottom: 5px;
+}
+.editForm input[type=text] {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 15px;
+  background-color: #FFE4CF;
+  color: #4E2323;
+}
+.editForm select {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 15px;
+  background-color: #FFE4CF;
+  color: #4E2323;
+}
+.editForm textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 15px;
+  background-color: #FFE4CF;
+  color: #4E2323;
+  resize: vertical;
+  word-wrap: break-word;
+}
+.editForm input[type=submit] {
+  background-color: #FFE4CF;
+  color: #4E2323;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 15px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  align-self: flex-start;
+}
+.editForm input[type=submit]:hover {
+  background-color: #ffc79c;
+}
+
+.outline-button {
+  text-decoration: none;
+  font-weight: normal;
+  font-size: 20pt;
+  color: #4E2323;
+  background-color: #FFEEE0;
+  border-radius: 50vw;
+  padding: 5pt 10pt;
+  display: inline-block;
+  outline: #4E2323 solid 1px;
+  text-align: center;
+  justify-content: center;
+  min-height: 3rem;
 }
 
 header {
