--- a/src/assets/styles/scss/books.scss
+++ b/src/assets/styles/scss/books.scss
@@ -1,78 +1,10 @@
 @import "abstracts/variables";
+@import "components/search-bar";
 
 a[href="/books.php"] {
   font-weight: bold;
 }
 
-.search-container {
-  grid-column: 4/10;
-  margin-top: 40pt;
-
-  .search-bar {
-    border-radius: 15pt;
-    width: 100%;
-    background-color: $background-primary;
-    text-indent: 10px;
-    padding: 6pt;
-    font-size: 14pt;
-    color: $text-color;
-    font-weight: 600;
-    filter: $drop-shadow;
-  }
-
-  .search-icon {
-    position: absolute;
-    right: 16pt;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 14pt;
-    aspect-ratio: 1;
-    background-image: url("../images/Search_Icon.svg");
-    background-size: cover;
-  }
-
-  .search-bar-container {
-    position: relative;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: center;
-    width: 100%;
-  }
-
-  .dropdown {
-    padding-top: 10px;
-    display: flex;
-    gap: 20pt;
-
-    .filter-container {
-
-      .filter {
-        border-radius: 15pt;
-        width: fit-content;
-        font-size: 11pt;
-        font-weight: 600;
-        color: $text-color;
-        background-color: $background-primary;
-        padding: 7pt 10pt;
-        filter: $drop-shadow;
-      }
-    }
-
-    .sort-container {
-
-      .sort {
-        border-radius: 15pt;
-        width: fit-content;
-        font-size: 11pt;
-        font-weight: 600;
-        color: $text-color;
-        background-color: $background-primary;
-        padding: 7pt 10pt;
-        filter: $drop-shadow;
-      }
-    }
-  }
-}
 
 .result-container {
   margin-top: 80pt;
