--- a/src/assets/styles/scss/styles.css
+++ b/src/assets/styles/scss/styles.css
@@ -52,13 +52,12 @@ main {
   color: #4E2323;
 }
 
-.text-small-semi > * {
+.text-small-semi, .text-small-semi * {
   font-weight: 600;
   font-size: 14pt;
   text-decoration: none;
   color: #4E2323;
 }
-
 .text-large-bold {
   font-weight: bold;
   font-size: 28pt;
@@ -266,8 +265,62 @@ table {
   justify-content: center;
 }
 
-.search-bar {
+.search-container {
+  grid-column: 4/10;
+  margin-top: 40pt;
+}
+.search-container .search-bar {
+  border-radius: 15pt;
+  width: 100%;
   background-color: #FFEEE0;
+  text-indent: 10px;
+  padding: 6pt;
+  font-size: 14pt;
+  color: #4E2323;
+  font-weight: 600;
+  filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
+}
+.search-container .search-icon {
+  position: absolute;
+  right: 16pt;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 14pt;
+  aspect-ratio: 1;
+  background-image: url("../images/Search_Icon.svg");
+  background-size: cover;
+}
+.search-container .search-bar-container {
+  position: relative;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.search-container .dropdown {
+  padding-top: 10px;
+  display: flex;
+  gap: 20pt;
+}
+.search-container .dropdown .filter-container .filter {
+  border-radius: 15pt;
+  width: fit-content;
+  font-size: 11pt;
+  font-weight: 600;
+  color: #4E2323;
+  background-color: #FFEEE0;
+  padding: 7pt 10pt;
+  filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
+}
+.search-container .dropdown .sort-container .sort {
+  border-radius: 15pt;
+  width: fit-content;
+  font-size: 11pt;
+  font-weight: 600;
+  color: #4E2323;
+  background-color: #FFEEE0;
+  padding: 7pt 10pt;
+  filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
 }
 
 .book-info-box {
