--- a/src/assets/styles/scss/styles.css
+++ b/src/assets/styles/scss/styles.css
@@ -525,6 +525,19 @@ table {
   min-height: 3rem;
 }
 
+.highlighted-button {
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 11pt;
+  color: #FFEEE0;
+  background-color: #38703E;
+  border-radius: 15pt;
+  padding: 7pt 10pt;
+  display: inline-block;
+  text-align: center;
+  justify-content: center;
+}
+
 header {
   grid-column: 1/13;
   display: flex;
