--- a/src/assets/styles/users.css
+++ b/src/assets/styles/users.css
@@ -112,8 +112,26 @@ a[href="/users.php"] {
   background-image: linear-gradient(#FFEEE0, #737373);
 }
 
+.result-container .userbox .user-informations > div {
+  display: flex;
+  flex-direction: row;
+  gap: 10pt;
+  align-items: baseline;
+}
+
 .result-container .userbox .user-admin-status {
   margin-left: auto;
+}
+
+.result-container .userbox .user-admin-status select {
+  border-radius: 15pt;
+  width: fit-content;
+  font-size: 11pt;
+  font-weight: 600;
+  color: #4E2323;
+  background-color: #FFEEE0;
+  padding: 7pt 10pt;
+  filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
 }
 
 .pagination {
