--- a/src/assets/styles/scss/login.scss
+++ b/src/assets/styles/scss/login.scss
@@ -47,6 +47,7 @@ header {
       font-size: 14pt;
       color: $text-color;
       min-height: 3rem;
+      background-color: $background-primary;
     }
 
     #login-button-wrapper {
