--- a/src/assets/styles/login.css
+++ b/src/assets/styles/login.css
@@ -74,6 +74,7 @@ header img {
   font-size: 14pt;
   color: #4E2323;
   min-height: 3rem;
+  background-color: #FFEEE0;
 }
 
 .login-container form #login-button-wrapper {
