update working, add AAHHH HELP NOT WORK, delet work wuhu

--- a/src/assets/styles/scss/components/_search-bar.scss
+++ b/src/assets/styles/scss/components/_search-bar.scss
@@ -67,5 +67,10 @@
         filter: $drop-shadow;
       }
     }
+
+    .neuButton {
+      filter: $drop-shadow;
+      text-align: right;
+    }
   }
 }
