--- a/src/assets/styles/scss/users.css
+++ b/src/assets/styles/scss/users.css
@@ -55,6 +55,10 @@
   padding: 7pt 10pt;
   filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
 }
+.search-container .dropdown .neuButton {
+  filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
+  text-align: right;
+}
 
 .highlighted-button {
   text-decoration: none;
