--- a/src/assets/styles/scss/book.css
+++ b/src/assets/styles/scss/book.css
@@ -34,5 +34,27 @@ a[href="/books.php"] {
   height: 2px;
   background-color: #4E2323;
 }
+.book-box .send-value-button {
+  border-radius: 15pt;
+  font-size: 11pt;
+  font-weight: 600;
+  color: #FFEEE0;
+  background-color: #38703E;
+  padding: 7pt 10pt;
+  filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
+  position: absolute;
+  right: 10px;
+}
+.book-box .send-value-button2 {
+  border-radius: 15pt;
+  font-size: 11pt;
+  font-weight: 600;
+  color: #FFEEE0;
+  background-color: #38703E;
+  padding: 7pt 10pt;
+  filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
+  position: absolute;
+  left: 10px;
+}
 
 /*# sourceMappingURL=book.css.map */
