--- a/src/assets/styles/scss/book.scss
+++ b/src/assets/styles/scss/book.scss
@@ -55,4 +55,15 @@ a[href="/books.php"] {
     position: absolute;
     right: 10px;
   }
+  .send-value-button2{
+    border-radius: 15pt;
+    font-size: 11pt;
+    font-weight: 600;
+    color: $background-primary;
+    background-color: $accent-color;
+    padding: 7pt 10pt;
+    filter: $drop-shadow;
+    position: absolute;
+    left: 10px;
+  }
 }
