--- a/src/assets/styles/users.css
+++ b/src/assets/styles/users.css
@@ -62,6 +62,11 @@
   filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
 }
 
+.search-container .dropdown .neuButton {
+  filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
+  text-align: right;
+}
+
 .highlighted-button {
   text-decoration: none;
   font-weight: bold;
