--- a/src/assets/styles/scss/components/_search-bar.scss
+++ b/src/assets/styles/scss/components/_search-bar.scss
@@ -68,9 +68,8 @@
       }
     }
 
-    .neuButton {
-      filter: $drop-shadow;
-      text-align: right;
+    a:last-child {
+      margin-left: auto;
     }
   }
 }
