--- a/src/assets/styles/books.css
+++ b/src/assets/styles/books.css
@@ -62,9 +62,8 @@
   filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
 }
 
-.search-container .dropdown .neuButton {
-  filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
-  text-align: right;
+.search-container .dropdown a:last-child {
+  margin-left: auto;
 }
 
 a[href="/books.php"] {
