--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -364,9 +364,8 @@ table {
   filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
 }
 
-.search-container .dropdown .neuButton {
-  filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
-  text-align: right;
+.search-container .dropdown a:last-child {
+  margin-left: auto;
 }
 
 .book-info-box {
