dockerfile updated because of some small issues, also some small stuff. ready for merge

--- a/src/assets/styles/scss/book.scss
+++ b/src/assets/styles/scss/book.scss
@@ -64,6 +64,7 @@ a[href="/books.php"] {
     padding: 7pt 10pt;
     filter: $drop-shadow;
     position: absolute;
-    left: 10px;
+    margin-top: 50px;
+    right: 10px;
   }
 }
