--- a/src/assets/styles/scss/components/_form.scss
+++ b/src/assets/styles/scss/components/_form.scss
@@ -53,6 +53,16 @@ $form-padding: 20px;
     resize: vertical;
     word-wrap: break-word;
   }
+  input[type="number"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 15px;
+    background-color: $background-secondary;
+    color: $text-color;
+    resize: vertical;
+    word-wrap: break-word;
+  }
 
   input[type="submit"] {
     background-color: $background-secondary;
