--- a/src/assets/styles/scss/components/_form.scss
+++ b/src/assets/styles/scss/components/_form.scss
@@ -53,7 +53,8 @@ $form-padding: 20px;
     resize: vertical;
     word-wrap: break-word;
   }
-  input[type="number"] {
+
+  input[type="password"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
@@ -95,3 +96,66 @@ $form-padding: 20px;
   }
 }
 
+.new-user-form {
+  display: flex;
+  flex-direction: column;
+  border-radius: 15pt;
+  background-color: $background-primary;
+  grid-column: 4/10;
+  padding: 40pt 80pt;
+  gap: 15pt;
+  filter: $drop-shadow;
+  background-image: url("../images/gradient.svg");
+  background-repeat: no-repeat;
+  background-position: bottom right;
+
+  input[type=password] {
+    vertical-align: baseline;
+    color: $text-color;
+    font-size: 15pt;
+    margin-left: 5pt;
+    border-bottom: $text-color solid;
+  }
+
+  textarea {
+    vertical-align: baseline;
+    color: $text-color;
+    font-size: 15pt;
+    margin-left: 5pt;
+    border-bottom: $text-color solid;
+  }
+  select{
+    vertical-align: baseline;
+    color: $text-color;
+    font-size: 15pt;
+    margin-left: 5pt;
+    border-bottom: $text-color solid;
+  }
+  .image{
+    vertical-align: baseline;
+    color: $text-color;
+    font-size: 15pt;
+    margin-left: 5pt;
+    border-bottom: $text-color solid;
+  }
+
+  input[type=number] {
+    vertical-align: baseline;
+    color: $text-color;
+    font-size: 15pt;
+    margin-left: 5pt;
+    border-bottom: $text-color solid;
+  }
+
+  p.text-small-normal {
+    margin-top: 10pt;
+  }
+
+  .button-container {
+    margin-top: 25pt;
+    display: flex;
+    flex-direction: row;
+    gap: 15pt;
+
+  }
+}
