--- a/src/assets/styles/scss/styles.css
+++ b/src/assets/styles/scss/styles.css
@@ -539,7 +539,7 @@ table {
   resize: vertical;
   word-wrap: break-word;
 }
-.editForm input[type=number] {
+.editForm input[type=password] {
   width: 100%;
   padding: 10px;
   margin-bottom: 10px;
@@ -575,6 +575,64 @@ table {
   border: none;
   display: inline-block;
   cursor: pointer;
+}
+
+.new-user-form {
+  display: flex;
+  flex-direction: column;
+  border-radius: 15pt;
+  background-color: #FFEEE0;
+  grid-column: 4/10;
+  padding: 40pt 80pt;
+  gap: 15pt;
+  filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
+  background-image: url("../images/gradient.svg");
+  background-repeat: no-repeat;
+  background-position: bottom right;
+}
+.new-user-form input[type=password] {
+  vertical-align: baseline;
+  color: #4E2323;
+  font-size: 15pt;
+  margin-left: 5pt;
+  border-bottom: #4E2323 solid;
+}
+.new-user-form textarea {
+  vertical-align: baseline;
+  color: #4E2323;
+  font-size: 15pt;
+  margin-left: 5pt;
+  border-bottom: #4E2323 solid;
+}
+.new-user-form select {
+  vertical-align: baseline;
+  color: #4E2323;
+  font-size: 15pt;
+  margin-left: 5pt;
+  border-bottom: #4E2323 solid;
+}
+.new-user-form .image {
+  vertical-align: baseline;
+  color: #4E2323;
+  font-size: 15pt;
+  margin-left: 5pt;
+  border-bottom: #4E2323 solid;
+}
+.new-user-form input[type=number] {
+  vertical-align: baseline;
+  color: #4E2323;
+  font-size: 15pt;
+  margin-left: 5pt;
+  border-bottom: #4E2323 solid;
+}
+.new-user-form p.text-small-normal {
+  margin-top: 10pt;
+}
+.new-user-form .button-container {
+  margin-top: 25pt;
+  display: flex;
+  flex-direction: row;
+  gap: 15pt;
 }
 
 .outline-button {
