--- a/src/assets/styles/scss/book.css
+++ b/src/assets/styles/scss/book.css
@@ -2,10 +2,10 @@ a[href="/books.php"] {
   font-weight: bold;
 }
 
-.outline-button {
-  margin-top: 40pt;
+.back-button {
   filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
   grid-column: 2/3;
+  margin-top: 40pt;
 }
 
 .book-box {
@@ -49,6 +49,17 @@ a[href="/books.php"] {
   flex-direction: column;
   justify-content: right;
   gap: 5pt;
+}
+
+.button-container {
+  right: 15pt;
+  top: 35pt;
+  margin-bottom: 5pt;
+  display: flex;
+  margin-top: 25pt;
+  flex-direction: row;
+  gap: 10pt;
+  justify-content: center;
 }
 
 /*# sourceMappingURL=book.css.map */
