--- a/src/assets/styles/scss/components/_form.scss
+++ b/src/assets/styles/scss/components/_form.scss
@@ -14,16 +14,11 @@ $form-padding: 20px;
     margin-bottom: 5px;
   }
 
-  input[type="text"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 15px;
-    background-color: $background-secondary;
-    color: $text-color;
-  }
-
-  select{
+  input[type="text"],
+  input[type="number"],
+  input[type="password"],
+  textarea,
+  select {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
@@ -33,56 +28,25 @@ $form-padding: 20px;
   }
 
   textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 15px;
-    background-color: $background-secondary;
-    color: $text-color;
-    resize: vertical;
-    word-wrap: break-word;
-  }
-
-  input[type=number] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 15px;
-    background-color: $background-secondary;
-    color: $text-color;
-    resize: vertical;
-    word-wrap: break-word;
-  }
-
-  input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 15px;
-    background-color: $background-secondary;
-    color: $text-color;
     resize: vertical;
     word-wrap: break-word;
   }
 
   input[type="submit"] {
-    background-color: $background-secondary;
     color: $text-color;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 15px;
     cursor: pointer;
     transition: background-color 0.3s ease;
     align-self: flex-start;
-  }
 
-  input[type="submit"]:hover {
-    background-color: darken($background-secondary, 10%);
+    &:hover {
+      background-color: darken($background-secondary, 10%);
+    }
   }
 
   input[type="file"] {
     display: none;
   }
+
   .image {
     width: 100%;
     padding: 10px;
@@ -99,63 +63,36 @@ $form-padding: 20px;
 .new-user-form {
   display: flex;
   flex-direction: column;
-  border-radius: 15pt;
+  border-radius: 15px;
   background-color: $background-primary;
   grid-column: 4/10;
-  padding: 40pt 80pt;
-  gap: 15pt;
+  padding: 40px 80px;
+  gap: 15px;
   filter: $drop-shadow;
   background-image: url("../images/gradient.svg");
   background-repeat: no-repeat;
   background-position: bottom right;
 
-  input[type=password] {
+  input[type="password"],
+  textarea,
+  select,
+  .image,
+  input[type="number"] {
     vertical-align: baseline;
     color: $text-color;
-    font-size: 15pt;
-    margin-left: 5pt;
-    border-bottom: $text-color solid;
-  }
-
-  textarea {
-    vertical-align: baseline;
-    color: $text-color;
-    font-size: 15pt;
-    margin-left: 5pt;
-    border-bottom: $text-color solid;
-  }
-  select{
-    vertical-align: baseline;
-    color: $text-color;
-    font-size: 15pt;
-    margin-left: 5pt;
-    border-bottom: $text-color solid;
-  }
-  .image{
-    vertical-align: baseline;
-    color: $text-color;
-    font-size: 15pt;
-    margin-left: 5pt;
-    border-bottom: $text-color solid;
-  }
-
-  input[type=number] {
-    vertical-align: baseline;
-    color: $text-color;
-    font-size: 15pt;
-    margin-left: 5pt;
+    font-size: 15px;
+    margin-left: 5px;
     border-bottom: $text-color solid;
   }
 
   p.text-small-normal {
-    margin-top: 10pt;
+    margin-top: 10px;
   }
 
   .button-container {
-    margin-top: 25pt;
+    margin-top: 25px;
     display: flex;
     flex-direction: row;
-    gap: 15pt;
-
+    gap: 15px;
   }
 }
