--- a/src/assets/styles/scss/styles.css
+++ b/src/assets/styles/scss/styles.css
@@ -503,14 +503,10 @@ table {
   color: #4E2323;
   margin-bottom: 5px;
 }
-.editForm input[type=text] {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border-radius: 15px;
-  background-color: #FFE4CF;
-  color: #4E2323;
-}
+.editForm input[type=text],
+.editForm input[type=number],
+.editForm input[type=password],
+.editForm textarea,
 .editForm select {
   width: 100%;
   padding: 10px;
@@ -520,41 +516,11 @@ table {
   color: #4E2323;
 }
 .editForm textarea {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border-radius: 15px;
-  background-color: #FFE4CF;
-  color: #4E2323;
-  resize: vertical;
-  word-wrap: break-word;
-}
-.editForm input[type=number] {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border-radius: 15px;
-  background-color: #FFE4CF;
-  color: #4E2323;
-  resize: vertical;
-  word-wrap: break-word;
-}
-.editForm input[type=password] {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border-radius: 15px;
-  background-color: #FFE4CF;
-  color: #4E2323;
   resize: vertical;
   word-wrap: break-word;
 }
 .editForm input[type=submit] {
-  background-color: #FFE4CF;
   color: #4E2323;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 15px;
   cursor: pointer;
   transition: background-color 0.3s ease;
   align-self: flex-start;
@@ -580,59 +546,35 @@ table {
 .new-user-form {
   display: flex;
   flex-direction: column;
-  border-radius: 15pt;
+  border-radius: 15px;
   background-color: #FFEEE0;
   grid-column: 4/10;
-  padding: 40pt 80pt;
-  gap: 15pt;
+  padding: 40px 80px;
+  gap: 15px;
   filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
   background-image: url("../images/gradient.svg");
   background-repeat: no-repeat;
   background-position: bottom right;
 }
-.new-user-form input[type=password] {
-  vertical-align: baseline;
-  color: #4E2323;
-  font-size: 15pt;
-  margin-left: 5pt;
-  border-bottom: #4E2323 solid;
-}
-.new-user-form textarea {
-  vertical-align: baseline;
-  color: #4E2323;
-  font-size: 15pt;
-  margin-left: 5pt;
-  border-bottom: #4E2323 solid;
-}
-.new-user-form select {
-  vertical-align: baseline;
-  color: #4E2323;
-  font-size: 15pt;
-  margin-left: 5pt;
-  border-bottom: #4E2323 solid;
-}
-.new-user-form .image {
-  vertical-align: baseline;
-  color: #4E2323;
-  font-size: 15pt;
-  margin-left: 5pt;
-  border-bottom: #4E2323 solid;
-}
+.new-user-form input[type=password],
+.new-user-form textarea,
+.new-user-form select,
+.new-user-form .image,
 .new-user-form input[type=number] {
   vertical-align: baseline;
   color: #4E2323;
-  font-size: 15pt;
-  margin-left: 5pt;
+  font-size: 15px;
+  margin-left: 5px;
   border-bottom: #4E2323 solid;
 }
 .new-user-form p.text-small-normal {
-  margin-top: 10pt;
+  margin-top: 10px;
 }
 .new-user-form .button-container {
-  margin-top: 25pt;
+  margin-top: 25px;
   display: flex;
   flex-direction: row;
-  gap: 15pt;
+  gap: 15px;
 }
 
 .outline-button {
