--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -58,6 +58,7 @@ main {
   text-decoration: none;
   color: #4E2323;
 }
+
 .text-medium-normal {
   font-weight: normal;
   font-size: 20pt;
@@ -101,10 +102,12 @@ main {
   overflow-wrap: break-word;
   z-index: 9999;
 }
+
 .error b {
   font-weight: 600;
   font-size: 14pt;
 }
+
 .error p {
   font-weight: normal;
   font-size: 12pt;
@@ -121,10 +124,12 @@ main {
   overflow-wrap: break-word;
   z-index: 9999;
 }
+
 .success b {
   font-weight: 600;
   font-size: 14pt;
 }
+
 .success p {
   font-weight: normal;
   font-size: 12pt;
@@ -299,6 +304,7 @@ table {
   grid-column: 4/10;
   margin-top: 40pt;
 }
+
 .search-container .search-bar {
   border-radius: 15pt;
   width: 100%;
@@ -310,6 +316,7 @@ table {
   font-weight: 600;
   filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
 }
+
 .search-container .search-icon {
   position: absolute;
   right: 16pt;
@@ -320,6 +327,7 @@ table {
   background-image: url("../images/Search_Icon.svg");
   background-size: cover;
 }
+
 .search-container .search-bar-container {
   position: relative;
   margin-bottom: 20px;
@@ -327,11 +335,13 @@ table {
   justify-content: center;
   width: 100%;
 }
+
 .search-container .dropdown {
   padding-top: 10px;
   display: flex;
   gap: 20pt;
 }
+
 .search-container .dropdown .filter-container .filter {
   border-radius: 15pt;
   width: fit-content;
@@ -342,6 +352,7 @@ table {
   padding: 7pt 10pt;
   filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
 }
+
 .search-container .dropdown .sort-container .sort {
   border-radius: 15pt;
   width: fit-content;
@@ -352,6 +363,7 @@ table {
   padding: 7pt 10pt;
   filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
 }
+
 .search-container .dropdown a:last-child {
   margin-left: auto;
 }
@@ -366,6 +378,7 @@ table {
   position: relative;
   height: 630px;
 }
+
 .book-info-box .info-text {
   position: absolute;
   z-index: 3;
@@ -373,6 +386,7 @@ table {
   bottom: 0;
   color: #4E2323;
 }
+
 .book-info-box .info-text p {
   text-decoration: none;
   font-weight: normal;
@@ -384,6 +398,7 @@ table {
   text-overflow: ellipsis;
   margin-bottom: 10pt;
 }
+
 .book-info-box .info-text h2 {
   text-decoration: none;
   font-weight: bold;
@@ -395,6 +410,7 @@ table {
   text-overflow: ellipsis;
   margin-bottom: 10pt;
 }
+
 .book-info-box img {
   justify-content: center;
   max-width: calc(100% - 20px);
@@ -433,6 +449,7 @@ table {
   gap: 6pt;
   margin-bottom: 40px;
 }
+
 .book-carousel .book-carousel-box {
   flex: 0 0 calc(20% - 10px);
   max-width: calc(20% - 10px);
@@ -442,6 +459,7 @@ table {
   background-color: #FFEEE0;
   position: relative;
 }
+
 .book-carousel .book-carousel-box .send-value-button {
   border-radius: 15pt;
   font-size: 11pt;
@@ -454,11 +472,13 @@ table {
   right: 20pt;
   bottom: 10pt;
 }
+
 .book-carousel .book-carousel-box .info-text {
   padding: 10px;
   overflow: hidden;
   color: #4E2323;
 }
+
 .book-carousel .book-carousel-box .info-text p {
   text-decoration: none;
   font-weight: normal;
@@ -468,6 +488,7 @@ table {
   text-overflow: ellipsis;
   margin-top: 10pt;
 }
+
 .book-carousel .book-carousel-box .info-text h2 {
   text-decoration: none;
   font-weight: bold;
@@ -476,6 +497,7 @@ table {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
 .book-carousel .book-carousel-box img {
   justify-content: center;
   max-width: calc(100% - 20px);
@@ -499,18 +521,16 @@ table {
   align-items: center;
   flex-wrap: wrap;
 }
+
 .editForm label {
   color: #4E2323;
   margin-bottom: 5px;
 }
-.editForm input[type=text] {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border-radius: 15px;
-  background-color: #FFE4CF;
-  color: #4E2323;
-}
+
+.editForm input[type=text],
+.editForm input[type=number],
+.editForm input[type=password],
+.editForm textarea,
 .editForm select {
   width: 100%;
   padding: 10px;
@@ -519,51 +539,27 @@ table {
   background-color: #FFE4CF;
   color: #4E2323;
 }
+
 .editForm textarea {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border-radius: 15px;
-  background-color: #FFE4CF;
-  color: #4E2323;
   resize: vertical;
   word-wrap: break-word;
 }
-.editForm input[type=number] {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border-radius: 15px;
-  background-color: #FFE4CF;
-  color: #4E2323;
-  resize: vertical;
-  word-wrap: break-word;
-}
-.editForm input[type=number] {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border-radius: 15px;
-  background-color: #FFE4CF;
-  color: #4E2323;
-  resize: vertical;
-  word-wrap: break-word;}
+
 .editForm input[type=submit] {
-  background-color: #FFE4CF;
   color: #4E2323;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 15px;
   cursor: pointer;
   transition: background-color 0.3s ease;
   align-self: flex-start;
 }
+
 .editForm input[type=submit]:hover {
   background-color: #ffc79c;
 }
+
 .editForm input[type=file] {
   display: none;
 }
+
 .editForm .image {
   width: 100%;
   padding: 10px;
@@ -574,6 +570,43 @@ table {
   border: none;
   display: inline-block;
   cursor: pointer;
+}
+
+.new-user-form {
+  display: flex;
+  flex-direction: column;
+  border-radius: 15px;
+  background-color: #FFEEE0;
+  grid-column: 4/10;
+  padding: 40px 80px;
+  gap: 15px;
+  filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
+  background-image: url("../images/gradient.svg");
+  background-repeat: no-repeat;
+  background-position: bottom right;
+}
+
+.new-user-form input[type=password],
+.new-user-form textarea,
+.new-user-form select,
+.new-user-form .image,
+.new-user-form input[type=number] {
+  vertical-align: baseline;
+  color: #4E2323;
+  font-size: 15px;
+  margin-left: 5px;
+  border-bottom: #4E2323 solid;
+}
+
+.new-user-form p.text-small-normal {
+  margin-top: 10px;
+}
+
+.new-user-form .button-container {
+  margin-top: 25px;
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
 }
 
 .outline-button {
@@ -612,14 +645,17 @@ header {
   padding-block: 10pt;
   height: 80pt;
 }
+
 header img {
   width: 200pt;
 }
+
 header nav {
   display: flex;
   align-items: center;
   gap: 15px;
 }
+
 header nav ul {
   list-style-type: none;
   padding: 0;
@@ -627,6 +663,7 @@ header nav ul {
   gap: 15px;
   align-items: center;
 }
+
 header nav .profile-picture {
   display: inline-block;
   width: 40pt;
@@ -648,11 +685,13 @@ footer {
   height: 50pt;
   z-index: 2;
 }
+
 footer nav {
   display: flex;
   align-items: center;
   gap: 15px;
 }
+
 footer nav ul {
   list-style-type: none;
   padding: 0;
@@ -660,5 +699,7 @@ footer nav ul {
   gap: 15px;
   align-items: center;
 }
+
+
 
 /*# sourceMappingURL=styles.css.map */
